# Cookiecutter-python-lambda

project-slug/: Makefile  pyproject.toml
project-slug/project_slug/: handler.py
project-slug/tests/: test_handler.py
